--- a/public/index.html
+++ b/public/index.html
@@ -33,5 +33,9 @@
     <script src="./js/classes/Projectile.js"></script>
     <script src="./js/eventListeners.js"></script>
     <script src="./js/index.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      const socket = io()
+    </script>
   </body>
 </html>
