--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+
     <script src="./js/classes/Enemy.js"></script>
     <script src="./js/classes/Player.js"></script>
     <script src="./js/classes/Particle.js"></script>
     <script src="./js/classes/Projectile.js"></script>
     <script src="./js/eventListeners.js"></script>
     <script src="./js/index.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      const socket = io()
-    </script>
   </body>
 </html>
